<resources>
    <string name="app_name">Healther</string>
    <string name="onboard1_title"> Discover Top Doctors </string>
    <string name="onboard2_title">Ask a Doctor Online</string>
    <string name="onboard3_title">Get Expert Advice</string>
    <string name="skip">Skip Tour</string>
    <string name="onboard1_information">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Phasellus lacinia libero ut metus convallis tempor. Vestibulum consequat, tortor mattis consequat</string>
    <string name="onboard2_information">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Phasellus lacinia libero ut metus convallis tempor. Vestibulum consequat, tortor mattis consequat</string>
    <string name="onboard3_information">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Phasellus lacinia libero ut metus convallis tempor. Vestibulum consequat, tortor mattis consequat</string>
    <string name="splash_title">Welcome to \n Self Care</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_login">Login</string>
    <string name="signup_title">Hello Beautiful \n Sign Up</string>
    <string name="login_title">Welcome Back \n Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="login_hint">Forgot Password?</string>
    <string name="login_bottom_link">Don’t have an account? Sign Up</string>
    <string name="signup_bottom_link">Already have an account? Login</string>
    <string name="error_email">Please enter a correct email</string>
    <string name="error_password">Please enter a correct password</string>
    <string name="error_name">Please enter a correct name</string>
    <string name="empty_email">Please enter your email address</string>
    <string name="empty_password">Please enter your password</string>
    <string name="empty_name">Please enter your name</string>
    <string name="home_title">Hi %1$s!</string>
    <string name="diet_menu_buckwheat">Buckwheat diet</string>
    <string name="diet_menu_chocolate">Chocolate diet</string>
    <string name="diet_buckwheat_part1">\tThanks to the beneficial properties of buckwheat, a complex beneficial effect
    is exerted on many systems, organs, as well as processes occurring in them, thanks to which:\n
     </string>
    <string name="diet_buckwheat_list">
        \t 🍘immunity increases;\n
        \t 🍘the walls of the vessels are strengthened;\n
        \t 🍘blood circulation is activated; \n
        \t 🍘the work of the liver, gastrointestinal organs is normalized;\n
        \t 🍘the amount of harmful cholesterol is reduced;\n
        \t 🍘slags, toxic substances, decomposition products are gently removed;\n
        \t 🍘swelling is removed;\n
        \t 🍘heartburn is eliminated;\n
        \t 🍘improves the condition of the skin; \n
        \t 🍘increases resistance to stress.
   </string>
    <string name="diet_buckwheat_part2">Buckwheat diet allows you to lose weight without a strong feeling of hunger,
            while in most cases it has no contraindications, if you know how to sit properly on such a technique.
            Disadvantages, limitations or side effects are peculiar only to the strictest mono diet.</string>
    <string name="diet_chocolate_part1">\tA chocolate-based diet really helps to lose weight.
            The product is a strong stimulant and has the following effect on a person: \n
        \t🍪 improves mood; \n
        \t🍪 invigorates; \n
        \t🍪 fills with energy; \n
        \t🍪 reduces the need for sleep;\n
        \t🍪 reduces appetite; \n
        \t🍪 suppresses the feeling of hunger.
    </string>
    <string name="diet_chocolate_part2">\t The delicacy forces the body to actively use internal reserves,
        which is why fat begins to burn. Natural chocolate contains caffeine,
        which has a diuretic effect and removes excess fluid along with toxins,
        slags and heavy metal salts. \n The result of using the menu of one of the chocolate diet options is noticeable after 2-3 days.
        In this way, you can lose 1-5 kg of excess weight.</string>
    <string name="contentDescription">Picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notify_title">💬 Reminder!</string>
    <string name="notify_text">\t Taking care of yourself means choosing yourself in your life, your desires and needs.
        Learn to interact with yourself, study yourself, listen to yourself. After all, the ecology of any relationship begins with
        the ecology of relationships with oneself. Taking care of yourself is about health, nutrition and physical activity.\n
        Most of us seem to thoughtlessly believe that we really have such awareness, and we
        only sometimes allow it to be obscured by various interventions — social pressure, attempts to strengthen our images,
        feelings of guilt, etc. </string>
    <string name="setting">Settings</string>
    <string name="analysis_title">Self-care\nschedule</string>
    <string name="analysis_part1">\tIf you follow a healthy lifestyle, try to do everything possible to pass on a useful habit to
        your children. From an early age, teach your child to do the right thing.\n
        \t🧘From an early age, send your child to the sports section.\n
        \t🧘Go out into nature at least once a week.\n
        \t🧘Sometimes give up public transport and a car, walk more.\n
        \t🧘Visit your doctor regularly for a preventive examination of the body.\n
        \t🧘Try not to accustom the child to fast food, sweets and products containing chemicals in the composition.\n
        \t🧘Since childhood, teach your baby the rules of personal hygiene.\n
        \t🧘Involve your child in home cleaning.</string>
    <string name="analysis_part2">\tHealthy lifestyle should not cause discomfort, all actions should be a joy. Instill healthy habits gradually.
        To begin with, get used to the new food, then start doing exercises in the morning, etc. Over time, you
        will begin to feel better and calmer, and you will be able to achieve goals that previously seemed unattainable.</string>
</resources>