<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/texTitleOnboard3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboard3_title"
        android:textColor="@color/purple"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageOnboard3"
        app:layout_constraintStart_toStartOf="@+id/imageOnboard3"
        app:layout_constraintTop_toBottomOf="@+id/imageOnboard3" />

    <ImageView
        android:id="@+id/imageOnboard3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_onboard_three"
        android:contentDescription="@string/contentDescription"/>

    <TextView
        android:id="@+id/textOnboard3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/purple"
        android:text="@string/onboard3_information"
        app:layout_constraintEnd_toEndOf="@+id/texTitleOnboard3"
        app:layout_constraintStart_toStartOf="@+id/texTitleOnboard3"
        app:layout_constraintTop_toBottomOf="@+id/texTitleOnboard3" />

    <TextView
        android:id="@+id/textSkipOnboard3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/skip"
        android:textColor="@color/purple"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textOnboard3"
        app:layout_constraintStart_toStartOf="@+id/textOnboard3"
        app:layout_constraintTop_toBottomOf="@+id/textOnboard3" />
</androidx.constraintlayout.widget.ConstraintLayout>