<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_diet_chocolate"
        android:alpha="0.4"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageDietChocBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:layout_margin="20dp"
                android:contentDescription="@string/contentDescription"/>/>
            <TextView
                android:id="@+id/textViewTitleDietChock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diet_menu_chocolate"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/textViewDietChockPart1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diet_chocolate_part1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>
            <ImageView
                android:id="@+id/imageDietChocRol"
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/img_diet_chocolate_pravila"
                android:contentDescription="@string/contentDescription"/>/>
            <TextView
                android:id="@+id/textViewDietChockPart2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diet_chocolate_part2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout >