<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_title"
            android:gravity="center"
            android:textSize="32sp"
            android:textColor="@color/dark_purple"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/imageLogin"
            android:layout_width="291dp"
            android:layout_height="268dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_login"
            android:contentDescription="@string/content_description"
            tools:ignore="ImageContrastCheck" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="1dp"
            android:background="@color/white"
            app:boxStrokeColor="@color/dark_purple"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:minHeight="48dp"
                android:paddingStart="33dp"
                android:paddingEnd="33dp"
                android:textColor="@color/hint"
                android:textColorHint="@color/hint"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="1dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/dark_purple"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="33dp"
                android:paddingEnd="33dp"
                android:textColor="@color/hint"
                android:textColorHint="@color/hint"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textLoginHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hint"
            android:textColor="@color/dark_purple"
            android:textSize="15sp"
            android:layout_marginStart="200dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogInLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/button_login"
            android:backgroundTint="@color/dark_purple"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/textLoginBottomLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/dark_purple"
            android:layout_gravity="center"
            android:text="@string/login_bottom_link"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
