<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/texTitleOnboard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="22sp"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:text="@string/onboard2_title"
        app:layout_constraintEnd_toEndOf="@+id/Onboard2"
        app:layout_constraintStart_toStartOf="@+id/Onboard2"
        app:layout_constraintTop_toBottomOf="@+id/Onboard2" />

    <TextView
        android:id="@+id/textOnboard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/onboard2_information"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="@+id/texTitleOnboard2"
        app:layout_constraintStart_toStartOf="@+id/texTitleOnboard2"
        app:layout_constraintTop_toBottomOf="@+id/texTitleOnboard2" />

    <ImageView
        android:id="@+id/Onboard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_onboard_two" />

    <TextView
        android:id="@+id/textSkipOnboard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/skip"
        android:textColor="@color/purple"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textOnboard2"
        app:layout_constraintStart_toStartOf="@+id/textOnboard2"
        app:layout_constraintTop_toBottomOf="@+id/textOnboard2" />
</androidx.constraintlayout.widget.ConstraintLayout>