<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SplashActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textSplashTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/splash_title"
            android:gravity="center"
            android:textSize="32sp"
            android:textColor="@color/dark_purple"
            android:textStyle="bold"
            android:layout_marginStart="100dp"/>

        <ImageView
            android:id="@+id/loginSplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_login"
            android:contentDescription="@string/content_description"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSplashSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/button_signup"
            android:backgroundTint="@color/dark_purple"
            android:padding="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSplashLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_purple"
            android:text="@string/button_login"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/dark_purple"
            app:strokeWidth="1dp"
            android:padding="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>